[project]
name = "python-mastery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]
[tool.hatch.build.targets.wheel]
packages = ["python-mastery"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
